--- a/css/style.css
+++ b/css/style.css
@@ -408,8 +408,10 @@ a {
 	}
 	.roadmap_title {
 		font-size: 10vw;
+		justify-content: center;
 		align-items: center;
 		text-align: center;
+		margin: 0 0 10vh 0;
 	}
 	#roadmap_image{
 		display: none;
